updated race check